2006-03-03  Christian Franke <franke@computer.org>

	* regtool.cc (options): Add 'binary'.
	(usage): Document 'load|unload|save' and '-b'.
	(find_key): Add 'options' parameter, add load/unload.
	(cmd_set): Add KT_BINARY case.
	(cmd_get): Add hex output in KT_BINARY case.
	(cmd_load): New function.
	(cmd_unload): New function.
	(set_privilege): New function.
	(cmd_save): New function.
	(commands): Add load, unload and save.
	(main): Add '-b'
	* utils.sgml (regtool): Document it.

2006-02-17  Corinna Vinschen  <corinna@vinschen.de>

	* cygpath.cc (get_long_name): Load GetLongPathNameA instead of incorrect
	GetLongPathName.
	(doit): Create mixed filename after converting to short or long pathname
	respectively.

2006-02-17  Jerry D. Hedden  <jerry@hedden.us>

	* ps.cc (main): Set aflag if -p option is given.

2006-02-16  Jerry D. Hedden  <jerry@hedden.us>

	* ps.cc (longopts): Add --process option.
	(opts): Add -p option.
	(usage): Mention -p/--process option.
	(main): Handle -p option.
	* utils.sgml: Describe -p/--process option.

2006-02-15  Igor Peshansky  <pechtcha@cs.nyu.edu>

	* regtool.cc (usage): Clarify help for "-K".

2006-02-08  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (find_on_path): Update copyright text.

2006-02-08  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (find_on_path): Create copy of rv on successful access
	check, since rv can be reused in subsequent calls.

2006-01-19  Christopher Faylor  <cgf@timesys.com>

	* cygcheck.cc (common_paths): Add "patch".

2006-01-19  Christopher Faylor  <cgf@timesys.com>

	* cygcheck.cc (init_paths): Record first_nonsys_path.
	(find_on_path): Start on first nonsys path when !search_sysdirs.

2006-01-18  Christopher Faylor  <cgf@timesys.com>

	* Makefile.in (sysconfdir): Remove unneeded variable.

	* mkgroup.c: Replace ` with ' throughout.
	* mkpasswd.c: Ditto.
	* setfacl.c: Ditto.
	* ssp.c: Ditto.

2006-01-18  Dave Korn  <dave.korn@artimi.com>
